empty project image, 11 projects to do

--- a/index.html
+++ b/index.html
@@ -252,40 +252,45 @@
       <li data-filter=".bootstrap">Bootstrap</li>
       <li data-filter=".ux-design">UX/UI Design</li>
       <li data-filter=".wordpress">WordPress</li>
-      <li data-filter=".beginner-learning">Beginner Learning</li>
+      <li data-filter=".mini">Mini Projects</li>
   </ul>
 
   <!-- Project container -->
   <div class="projects__container" data-aos="fade-in">
     <div class="project mix html-css-js">
-      <img src="./assets/project1.jpg" alt="Project 1">
-      <p>Web Development Project 1</p>
+      <img src="./assets/project.jpg" alt="Project 1">
+      <h3>Porject name</h3>
+      <p>a very short one sentence description</p>
       <p>html css js</p>
       <div class="project-buttons">
           <a href="https://live-demo-link1.com" target="_blank" class="btn btn-color-2">View</a>
           <a href="https://github.com/project-repo1" target="_blank" class="btn btn-color-1">GitHub</a>
       </div>
   </div>
-      <div class="project mix ux-design">
-          <img src="./assets/project2.jpg" alt="Project 2">
-          <p>Design Project 2</p>
-          <p>ux design</p>
+      <div class="project mix mini">
+          <img src="./assets/project.jpg" alt="Project 2">
+          <h3>Porject name</h3>
+          <p>a very short one sentence description</p>
+          <p>html css js</p>
           <div class="project-buttons">
             <a href="https://live-demo-link1.com" target="_blank" class="btn btn-color-2">View</a>
             <a href="https://github.com/project-repo1" target="_blank" class="btn btn-color-1">GitHub</a>
         </div>
       </div>
-      <div class="project mix wordpress">
-          <img src="./assets/project3.jpg" alt="Project 3">
-          <p>WordPress Project 3</p>
+      <div class="project mix bootstrap">
+          <img src="./assets/project.jpg" alt="Project 3">
+          <h3>Porject name</h3>
+          <p>a very short one sentence description</p>
+          <p>Bootstrap</p>
           <div class="project-buttons">
             <a href="https://live-demo-link1.com" target="_blank" class="btn btn-color-2">View</a>
             <a href="https://github.com/project-repo1" target="_blank" class="btn btn-color-1">GitHub</a>
         </div>
       </div>
       <div class="project mix html-css-js">
-          <img src="./assets/project4.jpg" alt="Project 4">
-          <p>Web Development Project 4</p>
+          <img src="./assets/project.jpg" alt="Project 4">
+          <h3>Porject name</h3>
+          <p>a very short one sentence description</p>
           <p>html css js</p>
           <div class="project-buttons">
             <a href="https://live-demo-link1.com" target="_blank" class="btn btn-color-2">View </a>
@@ -293,42 +298,71 @@
         </div>
       </div>
       <div class="project mix ux-design">
-          <img src="./assets/project5.jpg" alt="Project 5">
-          <p>Design Project 5</p>
-          <p>ux design</p>
+          <img src="./assets/project.jpg" alt="Project 5">
+          <h3>Porject name</h3>
+          <p>a very short one sentence description</p>
+          <p>design</p>
           <div class="project-buttons">
             <a href="https://live-demo-link1.com" target="_blank" class="btn btn-color-2">View</a>
             <a href="https://github.com/project-repo1" target="_blank" class="btn btn-color-1">GitHub</a>
         </div>
       </div>
-      <div class="project mix wordpress">
-        <img src="./assets/project6.jpg" alt="Project 6">
-        <p>wordpress Project 6</p>
+      <div class="project mix html-css-js">
+        <img src="./assets/project.jpg" alt="Project 6">
+        <h3>Porject name</h3>
+        <p>a very short one sentence description</p>
+        <p>html css js</p>
         <div class="project-buttons">
           <a href="https://live-demo-link1.com" target="_blank" class="btn btn-color-2">View</a>
           <a href="https://github.com/project-repo1" target="_blank" class="btn btn-color-1">GitHub</a>
       </div>
 
     </div>
-    <div class="project mix bootstrap">
-      <img src="./assets/project7.jpg" alt="Project 7">
-      <p>bootstrap Project 7</p>
+    <div class="project mix mini">
+      <img src="./assets/project.jpg" alt="Project 7">
+      <h3>Porject name</h3>
+      <p>a very short one sentence description</p>
+      <p>html css js</p>
       <div class="project-buttons">
         <a href="https://live-demo-link1.com" target="_blank" class="btn btn-color-2">View</a>
         <a href="https://github.com/project-repo1" target="_blank" class="btn btn-color-1">GitHub</a>
     </div>
   </div>
-  <div class="project mix html-css-js">
-    <img src="./assets/project8.jpg" alt="Project 8">
-    <p>html-css-js Project 8</p>
+  <div class="project mix ux-design">
+    <img src="./assets/project.jpg" alt="Project 8">
+    <h3>Porject name</h3>
+    <p>a very short one sentence description</p>
+    <p>design</p>
     <div class="project-buttons">
       <a href="https://live-demo-link1.com" target="_blank" class="btn btn-color-2">View</a>
       <a href="https://github.com/project-repo1" target="_blank" class="btn btn-color-1">GitHub</a>
   </div>
 </div>
 <div class="project mix wordpress">
-  <img src="./assets/project9.jpg" alt="Project 9">
-  <p>wordpress Project 9</p>
+  <img src="./assets/project.jpg" alt="Project 9">
+  <h3>Porject name</h3>
+      <p>a very short one sentence description</p>
+      <p>WordPress</p>
+  <div class="project-buttons">
+    <a href="https://live-demo-link1.com" target="_blank" class="btn btn-color-2">View</a>
+    <a href="https://github.com/project-repo1" target="_blank" class="btn btn-color-1">GitHub</a>
+</div>
+</div>
+<div class="project mix wordpress">
+  <img src="./assets/project.jpg" alt="Project 9">
+  <h3>Porject name</h3>
+      <p>a very short one sentence description</p>
+      <p>WordPress</p>
+  <div class="project-buttons">
+    <a href="https://live-demo-link1.com" target="_blank" class="btn btn-color-2">View</a>
+    <a href="https://github.com/project-repo1" target="_blank" class="btn btn-color-1">GitHub</a>
+</div>
+</div>
+<div class="project mix mini">
+  <img src="./assets/project.jpg" alt="Project 7">
+  <h3>Porject name</h3>
+  <p>a very short one sentence description</p>
+  <p>Bootstrap js</p>
   <div class="project-buttons">
     <a href="https://live-demo-link1.com" target="_blank" class="btn btn-color-2">View</a>
     <a href="https://github.com/project-repo1" target="_blank" class="btn btn-color-1">GitHub</a>
