animation duration, typo fix

--- a/index.html
+++ b/index.html
@@ -38,16 +38,16 @@
 
   <main>
     <section id="profile">
-      <div class="section__pic-container" data-aos="fade-up" data-aos-delay="300">
+      <div class="section__pic-container" data-aos="fade-up" data-aos-delay="350">
         <img src="./assets/profile.jpg" alt="Sandile profile picture" />
       </div>
-      <div class="section__text" data-aos="fade-in">
+      <div class="section__text" data-aos="fade-in" data-aos-delay="200">
         <p class="section__text__p1">Hello, I'm</p>
         <h1 class="title">Sandile Ndlovu</h1>
         <p class="section__text__p2">Frontend Developer</p>
         <p class="section__text__p2">UX Designer</p>
         <div class="btn-container">
-          <a href="./assets/cv/Ndlovu_Sandile_CV.pdf" download>
+          <a href="./assets/cv/Ndlovu_Sandile_CV" download>
             <button
             class="btn btn-color-2"
 
@@ -70,7 +70,7 @@
     </section>
     <section id="about">
       <p class="section__text__p1">Get To Know More</p>
-      <h1 class="title">About Me</h1>
+      <h1 class="title" data-aos="fade-up" data-aos-delay="200">About Me</h1>
       <div class="section-container">
         <div class="section__pic-container" data-aos="fade-up">
           <img
@@ -111,7 +111,7 @@
     </section>
     <section id="experience">
       <p class="section__text__p1">Explore My</p>
-      <h1 class="title">Experience</h1>
+      <h1 class="title" data-aos="fade-up" data-aos-delay="200">Experience</h1>
       <div class="experience-details-container" data-aos="fade-in">
         <div class="about-containers">
           <div class="details-container">
@@ -243,8 +243,8 @@
     </section>
 
     <section class="projects" id="projects">
-      <h1 class="title">Projects</h1>
       <p class="section__text__p1">Some projects I have worked on</p>
+      <h1 class="title" data-aos="fade-up" data-aos-delay="200">Projects</h1>
        <!-- Filter buttons -->
     <ul class="project__categories">
       <li class="mixitup-control-active" data-filter="all">All</li>
@@ -256,10 +256,10 @@
   </ul>
 
   <!-- Project container -->
-  <div class="projects__container" data-aos="fade-in">
+  <div class="projects__container" data-aos="fade-in" data-aos-delay="300">
     <div class="project mix html-css-js">
       <img src="./assets/project.jpg" alt="Project 1">
-      <h3>Porject name</h3>
+      <h3>Project name</h3>
       <p>a very short one sentence description</p>
       <p>html css js</p>
       <div class="project-buttons">
@@ -269,7 +269,7 @@
   </div>
       <div class="project mix mini">
           <img src="./assets/project.jpg" alt="Project 2">
-          <h3>Porject name</h3>
+          <h3>Project name</h3>
           <p>a very short one sentence description</p>
           <p>html css js</p>
           <div class="project-buttons">
@@ -279,7 +279,7 @@
       </div>
       <div class="project mix bootstrap">
           <img src="./assets/project.jpg" alt="Project 3">
-          <h3>Porject name</h3>
+          <h3>Project name</h3>
           <p>a very short one sentence description</p>
           <p>Bootstrap</p>
           <div class="project-buttons">
@@ -289,7 +289,7 @@
       </div>
       <div class="project mix html-css-js">
           <img src="./assets/project.jpg" alt="Project 4">
-          <h3>Porject name</h3>
+          <h3>Project name</h3>
           <p>a very short one sentence description</p>
           <p>html css js</p>
           <div class="project-buttons">
@@ -299,7 +299,7 @@
       </div>
       <div class="project mix ux-design">
           <img src="./assets/project.jpg" alt="Project 5">
-          <h3>Porject name</h3>
+          <h3>Project name</h3>
           <p>a very short one sentence description</p>
           <p>design</p>
           <div class="project-buttons">
@@ -309,7 +309,7 @@
       </div>
       <div class="project mix html-css-js">
         <img src="./assets/project.jpg" alt="Project 6">
-        <h3>Porject name</h3>
+        <h3>Project name</h3>
         <p>a very short one sentence description</p>
         <p>html css js</p>
         <div class="project-buttons">
@@ -320,7 +320,7 @@
     </div>
     <div class="project mix mini">
       <img src="./assets/project.jpg" alt="Project 7">
-      <h3>Porject name</h3>
+      <h3>Project name</h3>
       <p>a very short one sentence description</p>
       <p>html css js</p>
       <div class="project-buttons">
@@ -330,7 +330,7 @@
   </div>
   <div class="project mix ux-design">
     <img src="./assets/project.jpg" alt="Project 8">
-    <h3>Porject name</h3>
+    <h3>Project name</h3>
     <p>a very short one sentence description</p>
     <p>design</p>
     <div class="project-buttons">
@@ -340,7 +340,7 @@
 </div>
 <div class="project mix wordpress">
   <img src="./assets/project.jpg" alt="Project 9">
-  <h3>Porject name</h3>
+  <h3>Project name</h3>
       <p>a very short one sentence description</p>
       <p>WordPress</p>
   <div class="project-buttons">
@@ -350,7 +350,7 @@
 </div>
 <div class="project mix wordpress">
   <img src="./assets/project.jpg" alt="Project 9">
-  <h3>Porject name</h3>
+  <h3>Project name</h3>
       <p>a very short one sentence description</p>
       <p>WordPress</p>
   <div class="project-buttons">
@@ -360,7 +360,7 @@
 </div>
 <div class="project mix mini">
   <img src="./assets/project.jpg" alt="Project 7">
-  <h3>Porject name</h3>
+  <h3>Project name</h3>
   <p>a very short one sentence description</p>
   <p>Bootstrap js</p>
   <div class="project-buttons">
@@ -376,7 +376,7 @@
 
     <section id="contact">
       <p class="section__text__p1">Get in Touch</p>
-      <h1 class="title">Contact Me</h1>
+      <h1 class="title" data-aos="fade-up" data-aos-delay="200">Contact Me</h1>
       <div class="contact-info-upper-container" data-aos="fade-up">
         <ul class="contact__list">
           <li><a href="mailto:n.brendon05@gmail.com" class="contact__list-item" target="_blank"><i class="fas fa-envelope"></i></a></li>
@@ -390,7 +390,7 @@
   </main>
 
     <footer>
-      <div class="container footer__container">
+      <div class="container footer__container" data-aos="fade-up" data-aos-delay="100">
           <ul class="footer__menu">
               <!-- <li><a href="#">Home</a></li> -->
               <li><a href="#about">About</a></li>
@@ -419,7 +419,7 @@
     <script src="https://cdn.jsdelivr.net/npm/mixitup@3/dist/mixitup.min.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
-      AOS.init({duration: 1500, offset: 80});
+      AOS.init({duration: 2000, offset: 80});
     </script>
     <script src="script.js"></script>
   </body>
