--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <div class="section__pic-container" data-aos="fade-up" data-aos-delay="350">
         <img src="./assets/profile.jpg" alt="Sandile profile picture" />
       </div>
-      <div class="section__text" data-aos="fade-in" data-aos-delay="200">
+      <div class="section__text" data-aos="fade-in" data-aos-duration="3000">
         <p class="section__text__p1">Hello, I'm</p>
         <h1 class="title">Sandile Ndlovu</h1>
         <p class="section__text__p2">Frontend Developer</p>
@@ -100,7 +100,7 @@
               <p>freeCodeCamp<br />The Odin Project <br> <br>Google UX Design Professional Certificate</p>
             </div>
           </div>
-          <div class="text-container">
+          <div class="text-container" data-aos="fade-in" data-aos-delay="300">
             <p>
               Highly motivated, self-starting developer based in Johannesburg, South Africa. I've discovererd my passion for the world of web development and the beauty behind building useful websites. I am Seeking a junior dev position as I recently learned how to code by myself to finally launch a career building web applications and services amongst other professionals in the exciting world of tech.
             </p>
@@ -112,9 +112,9 @@
     <section id="experience">
       <p class="section__text__p1">Explore My</p>
       <h1 class="title" data-aos="fade-up" data-aos-delay="200">Experience</h1>
-      <div class="experience-details-container" data-aos="fade-in">
+      <div class="experience-details-container">
         <div class="about-containers">
-          <div class="details-container">
+          <div class="details-container" data-aos="fade-in" data-aos-delay="300">
             <h2 class="experience-sub-title">Frontend Development</h2>
             <div class="article-container">
               <article>
@@ -154,7 +154,7 @@
             </div>
           </div>
 
-          <div class="details-container">
+          <div class="details-container" data-aos="fade-in" data-aos-delay="300">
             <h2 class="experience-sub-title">Skills</h2>
             <div class="article-container">
               <article>
@@ -195,7 +195,7 @@
             </div>
           </div>
 
-          <div class="details-container">
+          <div class="details-container" data-aos="fade-in" data-aos-delay="300">
             <h2 class="experience-sub-title">Tools</h2>
             <div class="article-container">
               <article>
@@ -246,18 +246,18 @@
       <p class="section__text__p1">Some projects I have worked on</p>
       <h1 class="title" data-aos="fade-up" data-aos-delay="200">Projects</h1>
        <!-- Filter buttons -->
-    <ul class="project__categories">
+      <ul class="project__categories">
       <li class="mixitup-control-active" data-filter="all">All</li>
       <li data-filter=".html-css-js">Html, Css, Js</li>
       <li data-filter=".bootstrap">Bootstrap</li>
       <li data-filter=".ux-design">UX/UI Design</li>
       <li data-filter=".wordpress">WordPress</li>
-      <li data-filter=".mini">Mini Projects</li>
-  </ul>
+      <!-- <li data-filter=".mini">Mini Projects</li> -->
+    </ul>
 
   <!-- Project container -->
-  <div class="projects__container" data-aos="fade-in" data-aos-delay="300">
-    <div class="project mix html-css-js">
+      <div class="projects__container" data-aos="fade-in" data-aos-delay="300">
+      <div class="project mix html-css-js">
       <img src="./assets/project.jpg" alt="Project 1">
       <h3>Project name</h3>
       <p>a very short one sentence description</p>
@@ -267,7 +267,7 @@
           <a href="https://github.com/project-repo1" target="_blank" class="btn btn-color-1">GitHub</a>
       </div>
   </div>
-      <div class="project mix mini">
+      <!-- <div class="project mix mini">
           <img src="./assets/project.jpg" alt="Project 2">
           <h3>Project name</h3>
           <p>a very short one sentence description</p>
@@ -276,7 +276,7 @@
             <a href="https://live-demo-link1.com" target="_blank" class="btn btn-color-2">View</a>
             <a href="https://github.com/project-repo1" target="_blank" class="btn btn-color-1">GitHub</a>
         </div>
-      </div>
+      </div> -->
       <div class="project mix bootstrap">
           <img src="./assets/project.jpg" alt="Project 3">
           <h3>Project name</h3>
@@ -287,7 +287,7 @@
             <a href="https://github.com/project-repo1" target="_blank" class="btn btn-color-1">GitHub</a>
         </div>
       </div>
-      <div class="project mix html-css-js">
+      <!-- <div class="project mix html-css-js">
           <img src="./assets/project.jpg" alt="Project 4">
           <h3>Project name</h3>
           <p>a very short one sentence description</p>
@@ -296,7 +296,7 @@
             <a href="https://live-demo-link1.com" target="_blank" class="btn btn-color-2">View </a>
             <a href="https://github.com/project-repo1" target="_blank" class="btn btn-color-1">GitHub</a>
         </div>
-      </div>
+      </div> -->
       <div class="project mix ux-design">
           <img src="./assets/project.jpg" alt="Project 5">
           <h3>Project name</h3>
@@ -318,7 +318,7 @@
       </div>
 
     </div>
-    <div class="project mix mini">
+    <!-- <div class="project mix mini">
       <img src="./assets/project.jpg" alt="Project 7">
       <h3>Project name</h3>
       <p>a very short one sentence description</p>
@@ -327,8 +327,8 @@
         <a href="https://live-demo-link1.com" target="_blank" class="btn btn-color-2">View</a>
         <a href="https://github.com/project-repo1" target="_blank" class="btn btn-color-1">GitHub</a>
     </div>
-  </div>
-  <div class="project mix ux-design">
+  </div> -->
+  <!-- <div class="project mix ux-design">
     <img src="./assets/project.jpg" alt="Project 8">
     <h3>Project name</h3>
     <p>a very short one sentence description</p>
@@ -337,7 +337,17 @@
       <a href="https://live-demo-link1.com" target="_blank" class="btn btn-color-2">View</a>
       <a href="https://github.com/project-repo1" target="_blank" class="btn btn-color-1">GitHub</a>
   </div>
+</div> -->
+<!-- <div class="project mix wordpress">
+  <img src="./assets/project.jpg" alt="Project 9">
+  <h3>Project name</h3>
+      <p>a very short one sentence description</p>
+      <p>WordPress</p>
+  <div class="project-buttons">
+    <a href="https://live-demo-link1.com" target="_blank" class="btn btn-color-2">View</a>
+    <a href="https://github.com/project-repo1" target="_blank" class="btn btn-color-1">GitHub</a>
 </div>
+</div> -->
 <div class="project mix wordpress">
   <img src="./assets/project.jpg" alt="Project 9">
   <h3>Project name</h3>
@@ -348,17 +358,7 @@
     <a href="https://github.com/project-repo1" target="_blank" class="btn btn-color-1">GitHub</a>
 </div>
 </div>
-<div class="project mix wordpress">
-  <img src="./assets/project.jpg" alt="Project 9">
-  <h3>Project name</h3>
-      <p>a very short one sentence description</p>
-      <p>WordPress</p>
-  <div class="project-buttons">
-    <a href="https://live-demo-link1.com" target="_blank" class="btn btn-color-2">View</a>
-    <a href="https://github.com/project-repo1" target="_blank" class="btn btn-color-1">GitHub</a>
-</div>
-</div>
-<div class="project mix mini">
+<!-- <div class="project mix mini">
   <img src="./assets/project.jpg" alt="Project 7">
   <h3>Project name</h3>
   <p>a very short one sentence description</p>
@@ -367,7 +367,8 @@
     <a href="https://live-demo-link1.com" target="_blank" class="btn btn-color-2">View</a>
     <a href="https://github.com/project-repo1" target="_blank" class="btn btn-color-1">GitHub</a>
 </div>
-</div>
+
+</div> -->
   </div>
 
   </section>
@@ -419,7 +420,7 @@
     <script src="https://cdn.jsdelivr.net/npm/mixitup@3/dist/mixitup.min.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
-      AOS.init({duration: 2000, offset: 80});
+      AOS.init({duration: 2000, offset: 80, once: false, mirror: true});
     </script>
     <script src="script.js"></script>
   </body>
