--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
             class="about-pic"
           />
         </div>
-        <div class="about-details-container" data-aos="fade-in" data-aos-delay="300">
+        <div class="about-details-container">
           <div class="about-containers">
-            <div class="details-container">
+            <div class="details-container" data-aos="fade-in" data-aos-delay="200">
               <img
                 src="./assets/experience.png"
                 alt="Experience icon"
@@ -90,7 +90,7 @@
               <h3>Experience</h3>
               <p>2+ years <br /> Self taught Frontend Development <br><br> 1 year UI/UX design learning</p>
             </div>
-            <div class="details-container">
+            <div class="details-container" data-aos="fade-in" data-aos-delay="200">
               <img
                 src="./assets/education.png"
                 alt="Education icon"
@@ -100,7 +100,7 @@
               <p>freeCodeCamp<br />The Odin Project <br> <br>Google UX Design Professional Certificate</p>
             </div>
           </div>
-          <div class="text-container" data-aos="fade-in" data-aos-delay="300">
+          <div class="text-container" data-aos="fade-in" data-aos-delay="200">
             <p>
               Highly motivated, self-starting developer based in Johannesburg, South Africa. I've discovererd my passion for the world of web development and the beauty behind building useful websites. I am Seeking a junior dev position as I recently learned how to code by myself to finally launch a career building web applications and services amongst other professionals in the exciting world of tech.
             </p>
@@ -114,7 +114,7 @@
       <h1 class="title" data-aos="fade-up" data-aos-delay="200">Experience</h1>
       <div class="experience-details-container">
         <div class="about-containers">
-          <div class="details-container" data-aos="fade-in" data-aos-delay="300">
+          <div class="details-container" data-aos="fade-in" data-aos-delay="200">
             <h2 class="experience-sub-title">Frontend Development</h2>
             <div class="article-container">
               <article>
@@ -154,7 +154,7 @@
             </div>
           </div>
 
-          <div class="details-container" data-aos="fade-in" data-aos-delay="300">
+          <div class="details-container" data-aos="fade-in" data-aos-delay="200">
             <h2 class="experience-sub-title">Skills</h2>
             <div class="article-container">
               <article>
@@ -195,7 +195,7 @@
             </div>
           </div>
 
-          <div class="details-container" data-aos="fade-in" data-aos-delay="300">
+          <div class="details-container" data-aos="fade-in" data-aos-delay="200">
             <h2 class="experience-sub-title">Tools</h2>
             <div class="article-container">
               <article>
@@ -243,11 +243,11 @@
     </section>
 
     <section class="projects" id="projects">
-      <p class="section__text__p1">Some projects I have worked on</p>
+      <p class="section__text__p1">Some of my favorite</p>
       <h1 class="title" data-aos="fade-up" data-aos-delay="200">Projects</h1>
        <!-- Filter buttons -->
       <ul class="project__categories">
-      <li class="mixitup-control-active" data-filter="all">All</li>
+      <li class="mixitup-control-active" data-filter="all">All(5)</li>
       <li data-filter=".html-css-js">Html, Css, Js</li>
       <li data-filter=".bootstrap">Bootstrap</li>
       <li data-filter=".ux-design">UX/UI Design</li>
@@ -256,8 +256,8 @@
     </ul>
 
   <!-- Project container -->
-      <div class="projects__container" data-aos="fade-in" data-aos-delay="300">
-      <div class="project mix html-css-js">
+      <div class="projects__container" >
+      <div class="project mix html-css-js" data-aos="fade-in" data-aos-delay="200">
       <img src="./assets/project.jpg" alt="Project 1">
       <h3>Project name</h3>
       <p>a very short one sentence description</p>
@@ -277,7 +277,7 @@
             <a href="https://github.com/project-repo1" target="_blank" class="btn btn-color-1">GitHub</a>
         </div>
       </div> -->
-      <div class="project mix bootstrap">
+      <div class="project mix bootstrap" data-aos="fade-in" data-aos-delay="200">
           <img src="./assets/project.jpg" alt="Project 3">
           <h3>Project name</h3>
           <p>a very short one sentence description</p>
@@ -297,7 +297,7 @@
             <a href="https://github.com/project-repo1" target="_blank" class="btn btn-color-1">GitHub</a>
         </div>
       </div> -->
-      <div class="project mix ux-design">
+      <div class="project mix ux-design" data-aos="fade-in" data-aos-delay="200">
           <img src="./assets/project.jpg" alt="Project 5">
           <h3>Project name</h3>
           <p>a very short one sentence description</p>
@@ -307,7 +307,7 @@
             <a href="https://github.com/project-repo1" target="_blank" class="btn btn-color-1">GitHub</a>
         </div>
       </div>
-      <div class="project mix html-css-js">
+      <div class="project mix html-css-js" data-aos="fade-in" data-aos-delay="200">
         <img src="./assets/project.jpg" alt="Project 6">
         <h3>Project name</h3>
         <p>a very short one sentence description</p>
@@ -348,7 +348,7 @@
     <a href="https://github.com/project-repo1" target="_blank" class="btn btn-color-1">GitHub</a>
 </div>
 </div> -->
-<div class="project mix wordpress">
+<div class="project mix wordpress" data-aos="fade-in" data-aos-delay="200">
   <img src="./assets/project.jpg" alt="Project 9">
   <h3>Project name</h3>
       <p>a very short one sentence description</p>
@@ -377,8 +377,8 @@
 
     <section id="contact">
       <p class="section__text__p1">Get in Touch</p>
-      <h1 class="title" data-aos="fade-up" data-aos-delay="200">Contact Me</h1>
-      <div class="contact-info-upper-container" data-aos="fade-up">
+      <h1 class="title" data-aos="fade-up">Contact Me</h1>
+      <div class="contact-info-upper-container" data-aos="fade-in" data-aos-delay="200">
         <ul class="contact__list">
           <li><a href="mailto:n.brendon05@gmail.com" class="contact__list-item" target="_blank"><i class="fas fa-envelope"></i></a></li>
           <li><a href="https://m.me/ssandile.ndlovu" class="contact__list-item" target="_blank"><i class="fab fa-facebook-messenger"></i>  </a></li>
@@ -391,7 +391,7 @@
   </main>
 
     <footer>
-      <div class="container footer__container" data-aos="fade-up" data-aos-delay="100">
+      <div class="container footer__container">
           <ul class="footer__menu">
               <!-- <li><a href="#">Home</a></li> -->
               <li><a href="#about">About</a></li>
@@ -399,7 +399,7 @@
               <li><a href="#projects">Projects</a></li>
               <li><a href="#contact">Contact</a></li>
           </ul>
-          <ul class="footer__socials">
+          <ul class="footer__socials" data-aos="fade-up">
               <li><a href="https://x.com" target="_blank"><i class="fa-brands fa-x-twitter"></i></a></li>
               <li><a href="https://github.com/" target="_blank"><i class="fa-brands fa-github"></i></a></li>
               <li><a href="https://linkedin.com/" target="_blank"><i class="fa-brands fa-linkedin"></i></a></li>
@@ -420,7 +420,7 @@
     <script src="https://cdn.jsdelivr.net/npm/mixitup@3/dist/mixitup.min.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
-      AOS.init({duration: 2000, offset: 80, once: false, mirror: true});
+      AOS.init({duration: 1700, offset: 80, once: false, mirror: true});
     </script>
     <script src="script.js"></script>
   </body>
