fix nav bug with !important

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
               <li><a href="#projects">Projects</a></li>
               <li><a href="#contact">Contact</a></li>
           </ul>
+
           <div class="nav__buttons">
               <!-- <button class="nav__theme-btn nav__btn"><i class="fas fa-moon"></i></button> -->
               <button class="nav__toggle-open nav__btn"><i class="fas fa-bars"></i></button>
@@ -413,6 +414,9 @@
 
   <!-- end of footer  -->
 
+    <a href="#profile" class="back-to-top">
+      <i class="fas fa-arrow-up"></i>
+    </a>
 
     <script src="https://cdn.jsdelivr.net/npm/mixitup@3/dist/mixitup.min.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
