spacing styling and media queries

--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
   </main>
 
     <footer>
-      <div class="container footer__container">
+      <div class="container footer__container" data-aos="fade-in" data-aos-delay="200">
           <ul class="footer__menu">
               <!-- <li><a href="#">Home</a></li> -->
               <li><a href="#about">About</a></li>
@@ -400,7 +400,7 @@
               <li><a href="#projects">Projects</a></li>
               <li><a href="#contact">Contact</a></li>
           </ul>
-          <ul class="footer__socials" data-aos="fade-up">
+          <ul class="footer__socials">
               <li><a href="https://x.com" target="_blank"><i class="fa-brands fa-x-twitter"></i></a></li>
               <li><a href="https://github.com/" target="_blank"><i class="fa-brands fa-github"></i></a></li>
               <li><a href="https://linkedin.com/" target="_blank"><i class="fa-brands fa-linkedin"></i></a></li>
@@ -413,10 +413,6 @@
   </footer>
 
   <!-- end of footer  -->
-
-    <a href="#profile" class="back-to-top">
-      <i class="fas fa-arrow-up"></i>
-    </a>
 
     <script src="https://cdn.jsdelivr.net/npm/mixitup@3/dist/mixitup.min.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
