--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>HTML, CSS<br>Javascript</h3>
+                  <h3>HTML, CSS, Javascript</h3>
                   <p>Moderate-Intermediate</p>
                 </div>
               </article>
@@ -232,6 +232,18 @@
                 <div>
                   <h3>Figma</h3>
                   <p>wireframes & prototypes</p>
+
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>Local</h3>
+                  <p>WordPress development</p>
 
                 </div>
               </article>
