--- a/index.html
+++ b/index.html
@@ -8,10 +8,6 @@
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="assets/css/all.css">
     <link rel="stylesheet" href="mediaqueries.css" />
-    <link
-     rel="stylesheet"
-     href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
-   />
    <!-- animate  -->
    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   </head>
@@ -30,7 +26,7 @@
           </ul>
 
           <div class="nav__buttons">
-              <!-- <button class="nav__theme-btn nav__btn"><i class="fas fa-moon"></i></button> -->
+              <button class="nav__theme-btn nav__btn"><i class="fas fa-moon"></i></button>
               <button class="nav__toggle-open nav__btn"><i class="fas fa-bars"></i></button>
               <button class="nav__toggle-close nav__btn"><i class="fas fa-close"></i></button>
           </div>
@@ -49,10 +45,7 @@
         <p class="section__text__p2">UX Designer</p>
         <div class="btn-container">
           <a href="./assets/cv/Ndlovu_Sandile_CV" download>
-            <button
-            class="btn btn-color-2"
-
-          >
+            <button class="btn btn-color-2">
             Download CV
           </button>
           </a>
@@ -67,6 +60,10 @@
               <li><a href="https://linkedin.com/" target="_blank"><i class="fa-brands fa-linkedin"></i></a></li>
               <li><a href="https://dribble.com/" target="_blank"><i class="fa-brands fa-facebook"></i></a></li>
         </div>
+        <div class="arrow-down" data-aos="fade-down" data-aos-delay="300" data-aos-duration="1500">
+          <a href="#about"><img src="./assets/arrow.png" alt=""></a>
+        </div>
+
       </div>
     </section>
     <section id="about">
@@ -239,18 +236,16 @@
                 <img
                   src="./assets/checkmark.png"
                   alt="Experience icon"
-                  class="icon"
-                />
+                  class="icon"/>
                 <div>
                   <h3>Local</h3>
                   <p>WordPress development</p>
-
                 </div>
               </article>
-
-
             </div>
+
           </div>
+
         </div>
       </div>
     </section>
@@ -265,31 +260,20 @@
       <li data-filter=".bootstrap">Bootstrap</li>
       <li data-filter=".ux-design">UX/UI Design</li>
       <li data-filter=".wordpress">WordPress</li>
-      <!-- <li data-filter=".mini">Mini Projects</li> -->
     </ul>
 
   <!-- Project container -->
       <div class="projects__container" >
-      <div class="project mix html-css-js" data-aos="fade-in" data-aos-delay="200">
-      <img src="./assets/project.jpg" alt="Project 1">
-      <h3>Project name</h3>
-      <p>a very short one sentence description</p>
-      <p>html css js</p>
-      <div class="project-buttons">
-          <a href="https://live-demo-link1.com" target="_blank" class="btn btn-color-2">View</a>
-          <a href="https://github.com/project-repo1" target="_blank" class="btn btn-color-1">GitHub</a>
-      </div>
-  </div>
-      <!-- <div class="project mix mini">
-          <img src="./assets/project.jpg" alt="Project 2">
+        <div class="project mix html-css-js" data-aos="fade-in" data-aos-delay="200">
+          <img src="./assets/project.jpg" alt="Project 1">
           <h3>Project name</h3>
           <p>a very short one sentence description</p>
           <p>html css js</p>
-          <div class="project-buttons">
-            <a href="https://live-demo-link1.com" target="_blank" class="btn btn-color-2">View</a>
-            <a href="https://github.com/project-repo1" target="_blank" class="btn btn-color-1">GitHub</a>
+        <div class="project-buttons">
+          <a href="https://live-demo-link1.com" target="_blank" class="btn btn-color-2">View</a>
+          <a href="https://github.com/project-repo1" target="_blank" class="btn btn-color-1">GitHub</a>
         </div>
-      </div> -->
+      </div>
       <div class="project mix bootstrap" data-aos="fade-in" data-aos-delay="200">
           <img src="./assets/project.jpg" alt="Project 3">
           <h3>Project name</h3>
@@ -300,16 +284,6 @@
             <a href="https://github.com/project-repo1" target="_blank" class="btn btn-color-1">GitHub</a>
         </div>
       </div>
-      <!-- <div class="project mix html-css-js">
-          <img src="./assets/project.jpg" alt="Project 4">
-          <h3>Project name</h3>
-          <p>a very short one sentence description</p>
-          <p>html css js</p>
-          <div class="project-buttons">
-            <a href="https://live-demo-link1.com" target="_blank" class="btn btn-color-2">View </a>
-            <a href="https://github.com/project-repo1" target="_blank" class="btn btn-color-1">GitHub</a>
-        </div>
-      </div> -->
       <div class="project mix ux-design" data-aos="fade-in" data-aos-delay="200">
           <img src="./assets/project.jpg" alt="Project 5">
           <h3>Project name</h3>
@@ -320,68 +294,27 @@
             <a href="https://github.com/project-repo1" target="_blank" class="btn btn-color-1">GitHub</a>
         </div>
       </div>
-      <div class="project mix html-css-js" data-aos="fade-in" data-aos-delay="200">
+      <div class="project mix wordpress" data-aos="fade-in" data-aos-delay="200">
         <img src="./assets/project.jpg" alt="Project 6">
         <h3>Project name</h3>
         <p>a very short one sentence description</p>
-        <p>html css js</p>
+        <p>wordpress</p>
         <div class="project-buttons">
           <a href="https://live-demo-link1.com" target="_blank" class="btn btn-color-2">View</a>
           <a href="https://github.com/project-repo1" target="_blank" class="btn btn-color-1">GitHub</a>
       </div>
 
     </div>
-    <!-- <div class="project mix mini">
-      <img src="./assets/project.jpg" alt="Project 7">
+    <div class="project mix wordpress" data-aos="fade-in" data-aos-delay="200">
+      <img src="./assets/project.jpg" alt="Project 9">
       <h3>Project name</h3>
       <p>a very short one sentence description</p>
-      <p>html css js</p>
-      <div class="project-buttons">
-        <a href="https://live-demo-link1.com" target="_blank" class="btn btn-color-2">View</a>
-        <a href="https://github.com/project-repo1" target="_blank" class="btn btn-color-1">GitHub</a>
-    </div>
-  </div> -->
-  <!-- <div class="project mix ux-design">
-    <img src="./assets/project.jpg" alt="Project 8">
-    <h3>Project name</h3>
-    <p>a very short one sentence description</p>
-    <p>design</p>
+      <p>WordPress</p>
     <div class="project-buttons">
       <a href="https://live-demo-link1.com" target="_blank" class="btn btn-color-2">View</a>
       <a href="https://github.com/project-repo1" target="_blank" class="btn btn-color-1">GitHub</a>
-  </div>
-</div> -->
-<!-- <div class="project mix wordpress">
-  <img src="./assets/project.jpg" alt="Project 9">
-  <h3>Project name</h3>
-      <p>a very short one sentence description</p>
-      <p>WordPress</p>
-  <div class="project-buttons">
-    <a href="https://live-demo-link1.com" target="_blank" class="btn btn-color-2">View</a>
-    <a href="https://github.com/project-repo1" target="_blank" class="btn btn-color-1">GitHub</a>
-</div>
-</div> -->
-<div class="project mix wordpress" data-aos="fade-in" data-aos-delay="200">
-  <img src="./assets/project.jpg" alt="Project 9">
-  <h3>Project name</h3>
-      <p>a very short one sentence description</p>
-      <p>WordPress</p>
-  <div class="project-buttons">
-    <a href="https://live-demo-link1.com" target="_blank" class="btn btn-color-2">View</a>
-    <a href="https://github.com/project-repo1" target="_blank" class="btn btn-color-1">GitHub</a>
-</div>
-</div>
-<!-- <div class="project mix mini">
-  <img src="./assets/project.jpg" alt="Project 7">
-  <h3>Project name</h3>
-  <p>a very short one sentence description</p>
-  <p>Bootstrap js</p>
-  <div class="project-buttons">
-    <a href="https://live-demo-link1.com" target="_blank" class="btn btn-color-2">View</a>
-    <a href="https://github.com/project-repo1" target="_blank" class="btn btn-color-1">GitHub</a>
-</div>
-
-</div> -->
+    </div>
+    </div>
   </div>
 
   </section>
