--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <nav>
       <div class="container nav__container">
-          <a href="" class="nav__logo">
+          <a href="#" class="nav__logo">
               <img src="./assets/logo.png" alt="Navbar logo">
           </a>
           <ul class="nav__menu">
@@ -26,7 +26,7 @@
           </ul>
 
           <div class="nav__buttons">
-              <button class="nav__theme-btn nav__btn"><i class="fas fa-moon"></i></button>
+              <!-- <button class="nav__theme-btn nav__btn"><i class="fas fa-moon"></i></button> -->
               <button class="nav__toggle-open nav__btn"><i class="fas fa-bars"></i></button>
               <button class="nav__toggle-close nav__btn"><i class="fas fa-close"></i></button>
           </div>
