removed cv for now

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <p class="section__text__p2">Frontend Developer</p>
         <p class="section__text__p2">UX Designer</p>
         <div class="btn-container">
-          <a href="./assets/cv/Ndlovu_Sandile_CV" download>
+          <a href="">
             <button class="btn btn-color-2">
             Download CV
           </button>
@@ -58,7 +58,7 @@
           <li><a href="https://x.com" target="_blank"><i class="fa-brands fa-x-twitter"></i></a></li>
               <li><a href="https://github.com/" target="_blank"><i class="fa-brands fa-github"></i></a></li>
               <li><a href="https://linkedin.com/" target="_blank"><i class="fa-brands fa-linkedin"></i></a></li>
-              <li><a href="https://dribble.com/" target="_blank"><i class="fa-brands fa-facebook"></i></a></li>
+              <li><a href="https://fa-facebook.com/" target="_blank"><i class="fa-brands fa-facebook"></i></a></li>
         </div>
         <div class="arrow-down" data-aos="fade-down" data-aos-delay="300" data-aos-duration="1500">
           <a href="#about"><img src="./assets/arrow.png" alt=""></a>
