--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
       <li class="mixitup-control-active" data-filter="all">All(5)</li>
       <li data-filter=".html-css-js">Html, Css, Js</li>
       <li data-filter=".bootstrap">Bootstrap</li>
-      <li data-filter=".ux-design">UX/UI Design</li>
+      <!-- <li data-filter=".ux-design">UX/UI Design</li> -->
       <li data-filter=".wordpress">WordPress</li>
     </ul>
 
@@ -266,34 +266,37 @@
       <div class="projects__container" >
         <div class="project mix html-css-js" data-aos="fade-in" data-aos-delay="200">
           <img src="./assets/project.jpg" alt="Project 1">
-          <h3>Project name</h3>
-          <p>a very short one sentence description</p>
-          <p>html css js</p>
+          <h3>Nature's Domain</h3>
+          <p>Explore animals found in the wild.</p>
+          <p>Html, Css, Js</p>
         <div class="project-buttons">
-          <a href="https://live-demo-link1.com" target="_blank" class="btn btn-color-2">View</a>
-          <a href="https://github.com/project-repo1" target="_blank" class="btn btn-color-1">GitHub</a>
+          <a href="https://sandile05.github.io/natures-domain/" target="_blank" class="btn btn-color-2">Live Site</a>
+          <a href="https://github.com/sandile05/natures-domain" target="_blank" class="btn btn-color-1">GitHub</a>
         </div>
       </div>
+
       <div class="project mix bootstrap" data-aos="fade-in" data-aos-delay="200">
           <img src="./assets/project.jpg" alt="Project 3">
-          <h3>Project name</h3>
-          <p>a very short one sentence description</p>
+          <h3>StarLight Academy</h3>
+          <p>School Website.</p>
           <p>Bootstrap</p>
           <div class="project-buttons">
-            <a href="https://live-demo-link1.com" target="_blank" class="btn btn-color-2">View</a>
-            <a href="https://github.com/project-repo1" target="_blank" class="btn btn-color-1">GitHub</a>
+            <a href="https://sandile05.github.io/starlight-academy/" target="_blank" class="btn btn-color-2">Live Site</a>
+            <a href="https://github.com/sandile05/starlight-academy" target="_blank" class="btn btn-color-1">GitHub</a>
         </div>
       </div>
-      <div class="project mix ux-design" data-aos="fade-in" data-aos-delay="200">
+
+      <div class="project mix html-css-js" data-aos="fade-in" data-aos-delay="200">
           <img src="./assets/project.jpg" alt="Project 5">
-          <h3>Project name</h3>
-          <p>a very short one sentence description</p>
-          <p>design</p>
+          <h3>Grit & Gainz</h3>
+          <p>Gym Website.</p>
+          <p>Html, Css, Js</p>
           <div class="project-buttons">
-            <a href="https://live-demo-link1.com" target="_blank" class="btn btn-color-2">View</a>
-            <a href="https://github.com/project-repo1" target="_blank" class="btn btn-color-1">GitHub</a>
+            <a href="https://sandile05.github.io/grit-and-gainz/" target="_blank" class="btn btn-color-2">Live Site</a>
+            <a href="https://github.com/sandile05/grit-and-gainz" target="_blank" class="btn btn-color-1">GitHub</a>
         </div>
       </div>
+
       <div class="project mix wordpress" data-aos="fade-in" data-aos-delay="200">
         <img src="./assets/project.jpg" alt="Project 6">
         <h3>Project name</h3>
