--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
       <div class="projects__container">
 
         <div class="project mix html-css-js" data-aos="fade-in" data-aos-delay="200">
-          <img src="./assets/project.jpg" alt="Project 1">
+          <img src="./assets/natures-domain.png" alt="Project 1">
           <h3>Nature's Domain</h3>
           <p>Animals found in the wild.</p>
           <p>Html, Css, Js</p>
@@ -231,7 +231,7 @@
         </div>
 
         <div class="project mix bootstrap" data-aos="fade-in" data-aos-delay="200">
-          <img src="./assets/project.jpg" alt="Project 3">
+          <img src="./assets/school.png" alt="Project 3">
           <h3>StarLight Academy</h3>
           <p>School Website.</p>
           <p>Bootstrap</p>
@@ -243,7 +243,7 @@
         </div>
 
         <div class="project mix html-css-js" data-aos="fade-in" data-aos-delay="200">
-          <img src="./assets/project.jpg" alt="Project 5">
+          <img src="./assets/gym.png" alt="Project 5">
           <h3>Grit & Gainz</h3>
           <p>Gym Website.</p>
           <p>Html, Css, Js</p>
