--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
       <h1 class="title" data-aos="fade-up">Contact Me</h1>
       <div class="contact-info-upper-container" data-aos="fade-in" data-aos-delay="200">
         <ul class="contact__list">
-          <li><a href="mailto:n.brendon05@gmail.com" class="contact__list-item" target="_blank"><i
+          <li><a href="mailto:sandiledev5@gmail.com" class="contact__list-item" target="_blank"><i
                 class="fas fa-envelope"></i></a></li>
           <li><a href="https://m.me/ssandile.ndlovu" class="contact__list-item" target="_blank"><i
                 class="fab fa-facebook-messenger"></i> </a></li>
