--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
           </button>
         </div>
         <div id="socials-container">
-          <li><a href="https://x.com" target="_blank"><i class="fa-brands fa-x-twitter"></i></a></li>
           <li><a href="https://github.com/" target="_blank"><i class="fa-brands fa-github"></i></a></li>
-          <li><a href="https://linkedin.com/" target="_blank"><i class="fa-brands fa-linkedin"></i></a></li>
-          <li><a href="https://fa-facebook.com/" target="_blank"><i class="fa-brands fa-facebook"></i></a></li>
+          <li><a href="https://x.com" target="_blank"><i class="fa-brands fa-x-twitter"></i></a></li>
+          <!-- <li><a href="https://linkedin.com/" target="_blank"><i class="fa-brands fa-linkedin"></i></a></li> -->
+          <!-- <li><a href="https://fa-facebook.com/" target="_blank"><i class="fa-brands fa-facebook"></i></a></li> -->
         </div>
         <div class="arrow-down" data-aos="fade-down" data-aos-delay="300" data-aos-duration="1500">
           <a href="#about"><img src="./assets/arrow.png" alt=""></a>
@@ -80,7 +80,7 @@
             <div class="details-container" data-aos="fade-in" data-aos-delay="200">
               <img src="./assets/experience.png" alt="Experience icon" class="icon" />
               <h3>Experience</h3>
-              <p>2+ years <br /> Self taught Frontend Development <br><br> 1 year UI/UX design learning</p>
+              <p>Self taught Frontend Development <br><br> 1 year UI/UX design learning</p>
             </div>
             <div class="details-container" data-aos="fade-in" data-aos-delay="200">
               <img src="./assets/education.png" alt="Education icon" class="icon" />
@@ -90,7 +90,7 @@
           </div>
           <div class="text-container" data-aos="fade-in" data-aos-delay="200">
             <p>
-              Highly motivated, self-starting developer based in Johannesburg, South Africa. I've discovererd my passion
+              Self-starting developer based in Johannesburg, South Africa. I've discovererd my passion
               for the world of web development and the beauty behind building useful websites. I am Seeking a junior dev
               position as I recently learned how to code by myself to finally launch a career building web applications
               and services amongst other professionals in the exciting world of tech.
@@ -189,13 +189,6 @@
 
                 </div>
               </article>
-              <article>
-                <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
-                <div>
-                  <h3>Local</h3>
-                  <p>WordPress development</p>
-                </div>
-              </article>
             </div>
 
           </div>
@@ -205,7 +198,7 @@
     </section>
 
     <section class="projects" id="projects">
-      <p class="section__text__p1">Some of my favorite</p>
+      <p class="section__text__p1">Some of my</p>
       <h1 class="title" data-aos="fade-up" data-aos-delay="200">Projects</h1>
       <!-- Filter buttons -->
       <ul class="project__categories">
