more theme styles, footer styling

--- a/index.html
+++ b/index.html
@@ -57,10 +57,9 @@
           </button>
         </div>
         <div id="socials-container">
-          <li><a href="https://github.com/" target="_blank"><i class="fa-brands fa-github"></i></a></li>
-          <li><a href="https://x.com" target="_blank"><i class="fa-brands fa-x-twitter"></i></a></li>
-          <!-- <li><a href="https://linkedin.com/" target="_blank"><i class="fa-brands fa-linkedin"></i></a></li> -->
-          <!-- <li><a href="https://fa-facebook.com/" target="_blank"><i class="fa-brands fa-facebook"></i></a></li> -->
+          <li><a href="https://github.com/sandile05" target="_blank"><i class="fa-brands fa-github"></i></a></li>
+          <li><a href="https://linkedin.com/in/sandiledev" target="_blank"><i class="fa-brands fa-linkedin"></i></a></li>
+          <li><a href="https://x.com/dev_Sandile" target="_blank"><i class="fa-brands fa-x-twitter"></i></a></li>
         </div>
         <div class="arrow-down" data-aos="fade-down" data-aos-delay="300" data-aos-duration="1500">
           <a href="#about"><img src="./assets/arrow.png" alt=""></a>
@@ -301,14 +300,13 @@
         <li><a href="#contact">Contact</a></li>
       </ul>
       <ul class="footer__socials">
-        <li><a href="https://x.com" target="_blank"><i class="fa-brands fa-x-twitter"></i></a></li>
-        <li><a href="https://github.com/" target="_blank"><i class="fa-brands fa-github"></i></a></li>
-        <li><a href="https://linkedin.com/" target="_blank"><i class="fa-brands fa-linkedin"></i></a></li>
-        <li><a href="https://dribble.com/" target="_blank"><i class="fa-brands fa-facebook"></i></a></li>
+        <li><a href="https://github.com/sandile05" target="_blank"><i class="fa-brands fa-github"></i></a></li>
+        <li><a href="https://linkedin.com/in/sandiledev" target="_blank"><i class="fa-brands fa-linkedin"></i></a></li>
+        <li><a href="https://x.com/dev_Sandile" target="_blank"><i class="fa-brands fa-x-twitter"></i></a></li>
       </ul>
     </div>
     <div class="footer__copyright">
-      <small>2024 Sandile &copy; All Rights reserved.</small>
+      <small>2025 Sandile Ndlovu &copy; All Rights reserved.</small>
     </div>
   </footer>
 
