--- a/index.html
+++ b/index.html
@@ -79,12 +79,12 @@
             <div class="details-container" data-aos="fade-in" data-aos-delay="200">
               <img src="./assets/experience.png" alt="Experience icon" class="icon" />
               <h3>Experience</h3>
-              <p>Self taught Frontend Development <br><br> 1 year UI/UX design learning</p>
+              <p>Self taught Frontend Development<br>UI/UX design online learning</p>
             </div>
             <div class="details-container" data-aos="fade-in" data-aos-delay="200">
               <img src="./assets/education.png" alt="Education icon" class="icon" />
               <h3>Education</h3>
-              <p>freeCodeCamp<br />The Odin Project <br> <br>Google UX Design Professional Certificate</p>
+              <p>freeCodeCamp<br />The Odin Project <br>Google UX Design Professional Certificate</p>
             </div>
           </div>
           <div class="text-container" data-aos="fade-in" data-aos-delay="200">
