logo styling, footer colors

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <nav>
     <div class="container nav__container">
       <a href="#" class="nav__logo">
-        <img src="./assets/logo.png" alt="Navbar logo">
+        <img src="./assets/sandile-logo.png" alt="Navbar logo">
       </a>
       <ul class="nav__menu">
         <li><a href="#about">About</a></li>
