project language color

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
           <img src="./assets/natures-domain.png" alt="Project 1">
           <h3>Nature's Domain</h3>
           <p>Animals found in the wild.</p>
-          <p>Html, Css, Js</p>
+          <p class="language">Html, Css, Js</p>
           <div class="project-buttons">
             <a href="https://sandile05.github.io/natures-domain/" target="_blank" class="btn btn-color-2">Live Site</a>
             <a href="https://github.com/sandile05/natures-domain" target="_blank" class="btn btn-color-1">GitHub</a>
@@ -226,7 +226,7 @@
           <img src="./assets/school.png" alt="Project 3">
           <h3>StarLight Academy</h3>
           <p>School Website.</p>
-          <p>Bootstrap</p>
+          <p class="language">Bootstrap</p>
           <div class="project-buttons">
             <a href="https://sandile05.github.io/starlight-academy/" target="_blank" class="btn btn-color-2">Live
               Site</a>
@@ -238,7 +238,7 @@
           <img src="./assets/gym.png" alt="Project 5">
           <h3>Grit & Gainz</h3>
           <p>Gym Website.</p>
-          <p>Html, Css, Js</p>
+          <p class="language">Html, Css, Js</p>
           <div class="project-buttons">
             <a href="https://sandile05.github.io/grit-and-gainz/" target="_blank" class="btn btn-color-2">Live Site</a>
             <a href="https://github.com/sandile05/grit-and-gainz" target="_blank" class="btn btn-color-1">GitHub</a>
@@ -249,7 +249,7 @@
         <img src="./assets/project.jpg" alt="Project 6">
         <h3>Project name</h3>
         <p>one sentence description</p>
-        <p>wordpress</p>
+        <p class="language">wordpress</p>
         <div class="project-buttons">
           <a href="https://live-demo-link1.com" target="_blank" class="btn btn-color-2">View</a>
           <a href="https://github.com/project-repo1" target="_blank" class="btn btn-color-1">GitHub</a>
@@ -258,7 +258,7 @@
         <!-- <div class="project mix wordpress" data-aos="fade-in" data-aos-delay="200">
         <img src="./assets/project.jpg" alt="Project 9">
         <h3>Project name</h3>
-        <p>one sentence description</p>
+        <p class="language">one sentence description</p>
         <p>WordPress</p>
         <div class="project-buttons">
           <a href="https://live-demo-link1.com" target="_blank" class="btn btn-color-2">View</a>
