hero image, btn styles

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <main>
     <section id="profile">
       <div class="section__pic-container" data-aos="fade-up" data-aos-delay="350">
-        <img src="./assets/profile.jpg" alt="Sandile profile picture" />
+        <img src="./assets/pic1.png" alt="Sandile profile picture" />
       </div>
       <div class="section__text" data-aos="fade-in" data-aos-duration="3000">
         <p class="section__text__p1">Hello, I'm</p>
