--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
         <p class="section__text__p2">UX Designer</p>
         <div class="btn-container">
           <a href="">
-            <button class="btn btn-color-2">
+            <!-- <button class="btn btn-color-2">
               Download CV
-            </button>
+            </button> -->
           </a>
 
           <button class="btn btn-color-1" onclick="location.href='./#contact'">
-            Contact Info
+            Contact
           </button>
         </div>
         <div id="socials-container">
@@ -61,9 +61,9 @@
           <li><a href="https://linkedin.com/in/sandiledev" target="_blank"><i class="fa-brands fa-linkedin"></i></a></li>
           <li><a href="https://x.com/dev_Sandile" target="_blank"><i class="fa-brands fa-x-twitter"></i></a></li>
         </div>
-        <div class="arrow-down" data-aos="fade-down" data-aos-delay="300" data-aos-duration="1500">
+        <!-- <div class="arrow-down" data-aos="fade-down" data-aos-delay="300" data-aos-duration="1500">
           <a href="#about"><img src="./assets/arrow.png" alt=""></a>
-        </div>
+        </div> -->
 
       </div>
     </section>
@@ -154,9 +154,21 @@
               <article>
                 <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
                 <div>
-                  <h3>WordPress development</h3>
+                  <h3>Custom styling (css)</h3>
                 </div>
               </article>
+              <article>
+                <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
+                <div>
+                  <h3>Debugging & Browser testing</h3>
+                </div>
+              </article>
+              <!-- <article>
+                <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
+                <div>
+                  <h3>WordPress development</h3>
+                </div>
+              </article> -->
 
             </div>
           </div>
@@ -167,7 +179,16 @@
               <article>
                 <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
                 <div>
-                  <h3>Visual Studio Code</h3>
+                  <h3>OS</h3>
+                  <p>Linux (ubuntu)</p>
+                  <p>Windows 10/11</p>
+                </div>
+              </article>
+
+              <article>
+                <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
+                <div>
+                  <h3>VS Code</h3>
 
                 </div>
               </article>
@@ -185,9 +206,10 @@
                 <div>
                   <h3>Figma</h3>
                   <p>wireframes & prototypes</p>
-
                 </div>
               </article>
+
+              
             </div>
 
           </div>
