new portfolio bio, project preview image

--- a/index.html
+++ b/index.html
@@ -89,10 +89,7 @@
           </div>
           <div class="text-container" data-aos="fade-in" data-aos-delay="200">
             <p>
-              Self-starting developer based in Johannesburg, South Africa. I've discovererd my passion
-              for the world of web development and the beauty behind building useful websites. I am Seeking a junior dev
-              position as I recently learned how to code by myself to finally launch a career building web applications
-              and services amongst other professionals in the exciting world of tech.
+              Front-end developer based in Johannesburg, South Africa, with a passion for crafting beautiful and functional websites. I bring ideas to life through clean, user-focused web experiences that are both useful and visually engaging.
             </p>
           </div>
         </div>
