hero intro text changed

--- a/index.html
+++ b/index.html
@@ -41,10 +41,9 @@
         <img src="./assets/pic1.png" alt="Sandile profile picture" />
       </div>
       <div class="section__text" data-aos="fade-in" data-aos-duration="3000">
-        <p class="section__text__p1">Hello, I'm</p>
-        <h1 class="title">Sandile Ndlovu</h1>
-        <p class="section__text__p2">Frontend Developer</p>
-        <p class="section__text__p2">UX Designer</p>
+        <p class="section__text__p1">Hi, I'm</p>
+        <h1 class="title">Sandile</h1>
+        <p class="section__text__p2">I build responsive, user-friendly websites that help businesses and individuals stand out online.</p>
         <div class="btn-container">
           <a href="">
             <!-- <button class="btn btn-color-2">
