--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           </a>
 
           <button class="btn btn-color-1" onclick="location.href='./#contact'">
-            Contact
+            Get in Touch
           </button>
         </div>
         <div id="socials-container">
@@ -233,7 +233,7 @@
           <img src="./assets/natures-domain.png" alt="Project 1">
           <h3>Nature's Domain</h3>
           <p>Animals found in the wild.</p>
-          <p class="language">Html, Css, Js</p>
+          <p class="language">This personal site showcases my work and skills as a front-end web developer. Built using HTML, CSS, and JavaScript</p>
           <div class="project-buttons">
             <a href="https://sandile05.github.io/natures-domain/" target="_blank" class="btn btn-color-2">Live Site</a>
             <a href="https://github.com/sandile05/natures-domain" target="_blank" class="btn btn-color-1">GitHub</a>
