project cards descriptions, style cards info on hover

--- a/index.html
+++ b/index.html
@@ -232,8 +232,8 @@
         <div class="project mix html-css-js" style="background-image: url('./assets/natures-domain.png');" data-aos="fade-in" data-aos-delay="200">
           <div class="project-content">
             <h3>Nature's Domain</h3>
-            <p>Animals found in the wild.</p>
-            <p class="language">This personal site showcases my work and skills as a front-end web developer. Built using HTML, CSS, and JavaScript</p>
+            <p class="project-title">Animals found in the wild.</p>
+            <p class="description">This personal site showcases my work and skills as a front-end web developer. Built using HTML, CSS, and JavaScript</p>
             <div class="project-buttons">
               <a href="https://sandile05.github.io/natures-domain/" target="_blank" class="btn btn-color-2">Live Site</a>
               <a href="https://github.com/sandile05/natures-domain" target="_blank" class="btn btn-color-1">GitHub</a>
@@ -242,11 +242,11 @@
         </div>
         
 
-        <div class="project mix html-css-js" style="background-image: url('./assets/natures-domain.png');" data-aos="fade-in" data-aos-delay="200">
+        <div class="project mix html-css-js" style="background-image: url('./assets/gym.png');" data-aos="fade-in" data-aos-delay="200">
           <div class="project-content">
             <h3>Grit & Gainz</h3>
-            <p>Gym Website</p>
-            <p class="language">This personal site showcases my work and skills as a front-end web developer. Built using HTML, CSS, and JavaScript</p>
+            <p class="project-title">Gym Website</p>
+            <p class="description">A bold responsive gym website built with HTML, CSS, and Javascript. Showcasing services, trainers, and membership plans.</p>
             <div class="project-buttons">
               <a href="https://sandile05.github.io/grit-and-gainz/" target="_blank" class="btn btn-color-2">Live Site</a>
               <a href="https://github.com/sandile05/grit-and-gainz" target="_blank" class="btn btn-color-1">GitHub</a>
@@ -255,14 +255,14 @@
         </div>
         
 
-        <div class="project mix bootstrap" style="background-image: url('./assets/natures-domain.png');" data-aos="fade-in" data-aos-delay="200">
+        <div class="project mix bootstrap" style="background-image: url('./assets/starlight.jpg');" data-aos="fade-in" data-aos-delay="200">
           <div class="project-content">
             <h3>StarLight Academy</h3>
-            <p>School Website</p>
-            <p class="language">This personal site showcases my work and skills as a front-end web developer. Built using Bootstrap</p>
+            <p class="project-title">School Website</p>
+            <p class="description">A responsive school website built with Bootstrap, featuring clean layout, easy navigation, and essential school information.</p>
             <div class="project-buttons">
-              <a href="https://sandile05.github.io/natures-domain/" target="_blank" class="btn btn-color-2">Live Site</a>
-              <a href="https://github.com/sandile05/natures-domain" target="_blank" class="btn btn-color-1">GitHub</a>
+              <a href="https://sandile05.github.io/starlight-academy/" target="_blank" class="btn btn-color-2">Live Site</a>
+              <a href="https://github.com/sandile05/starlight-academy" target="_blank" class="btn btn-color-1">GitHub</a>
             </div>
           </div>
         </div>
