--- a/index.html
+++ b/index.html
@@ -37,42 +37,33 @@
 
   <main>
     <section id="profile">
-      <div class="section__pic-container" data-aos="fade-up" data-aos-delay="350">
-        <img src="./assets/pic1.png" alt="Sandile profile picture" />
-      </div>
-      <div class="section__text" data-aos="fade-in" data-aos-duration="3000">
-        <p class="section__text__p1">Hi, I'm</p>
-        <h1 class="title">Sandile</h1>
-        <p class="section__text__p2">I build responsive, user-friendly websites that help businesses and individuals stand out online.</p>
-        <div class="btn-container">
-          <a href="">
-            <!-- <button class="btn btn-color-2">
-              Download CV
-            </button> -->
-          </a>
-
-          <button class="btn btn-color-1" onclick="location.href='./#contact'">
-            Get in Touch
-          </button>
+      <div class="profile-inner">
+        <div class="section__pic-container" data-aos="fade-up" data-aos-delay="350">
+          <img src="./assets/pic1.png" alt="Sandile profile picture" />
         </div>
-        <div id="socials-container">
-          <li><a href="https://github.com/sandile05" target="_blank"><i class="fa-brands fa-github"></i></a></li>
-          <li><a href="https://linkedin.com/in/sandiledev" target="_blank"><i class="fa-brands fa-linkedin"></i></a></li>
-          <li><a href="https://x.com/dev_Sandile" target="_blank"><i class="fa-brands fa-x-twitter"></i></a></li>
+        <div class="section__text" data-aos="fade-in" data-aos-duration="3000">
+          <p class="section__text__p1">Hi, I'm</p>
+          <h1 class="title">Sandile</h1>
+          <p class="section__text__p2">
+            I build responsive, user-friendly websites that help businesses and individuals stand out online.
+          </p>
+          <div class="btn-container">
+            <a href=""></a>
+            <button class="btn btn-color-1" onclick="location.href='./#contact'">Get in Touch</button>
+          </div>
+          <div id="socials-container">
+            <li><a href="https://github.com/sandile05" target="_blank"><i class="fa-brands fa-github"></i></a></li>
+            <li><a href="https://linkedin.com/in/sandiledev" target="_blank"><i class="fa-brands fa-linkedin"></i></a></li>
+            <li><a href="https://x.com/dev_Sandile" target="_blank"><i class="fa-brands fa-x-twitter"></i></a></li>
+          </div>
         </div>
-        <!-- <div class="arrow-down" data-aos="fade-down" data-aos-delay="300" data-aos-duration="1500">
-          <a href="#about"><img src="./assets/arrow.png" alt=""></a>
-        </div> -->
-
       </div>
     </section>
+    
     <section id="about">
       <p class="section__text__p1">Get To Know More</p>
       <h1 class="title" data-aos="fade-up" data-aos-delay="200">About Me</h1>
       <div class="section-container">
-        <div class="section__pic-container" data-aos="fade-up">
-          <img src="./assets/profile.jpg" alt="Profile picture" class="about-pic" />
-        </div>
         <div class="about-details-container">
           <div class="about-containers">
             <div class="details-container" data-aos="fade-in" data-aos-delay="200">
